# copilotPrueba

./: README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
frontend/: .env.example  index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: auth.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/contexts/: AuthProvider.jsx  useAuth.js
frontend/src/pages/: LoginPage.jsx  LoginPage.module.css  WelcomePage.jsx  WelcomePage.module.css
